--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,8 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
+
+[tool.ruff.lint]
+extend-ignore = [
+    "SIM108", # Don't force ternary
+]
